updated for Assignment 7

--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -4,9 +4,9 @@
 {% block content %}
 <h1>Homepage</h1>
 
-<div>
-  <p> This is a home page. </p>
-</div>
+<p>Erica Lee Johnson</p>
+
+<p> This is a home page. </p>
 
 
 {% endblock content %}
